--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -14,7 +14,7 @@
                             <div class="carousel-item h-100 @active" style="object-fit:cover">
                                 <a href="#" class="slide-title invisible"><p class="p-5"></p></a>
                                 <a href="#" class="slide-sub-title invisible"><p class="p-5"></p></a>
-                                <img class="covered d-block w-100 mysprite @item" style="object-fit:cover; height:100%; width:100%; max-height:100%; max-width:100%" />
+                                <img class="covered d-block w-100 mysprite @item" />
                             </div>
                         }
                     }
