--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -10,12 +10,14 @@
 
     <link rel="stylesheet" href="~/Content/custom.css">
     <link rel="stylesheet" href="~/Content/bootstrap.css" />
-    <link id="css-sprite-link" rel="stylesheet" href="~/Content/v2.0/images/slides/sprites/xl-40/mysprite.sprite.css" />
+    <link id="css-sprite-link" rel="stylesheet" href="" />
 
     <script src="~/Scripts/jquery-3.5.1.js"></script>
     <script src="~/Scripts/custom.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=1.0">
+
+    <link rel="manifest" href="~/manifest.json" />
 </head>
 <body class="bg">
     <div class="navbar navbar-expand-lg fixed-top bg-blue border-1-orange">
