--- a/cava/Views/Home/Index.cshtml
+++ b/cava/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model cava.Models.Custom.Deliverer
 
 @{
-    ViewBag.Title = "Cava";
+    ViewBag.Title = "CAVA RESTOBAR";
 }
 
 <div id="main-container" class="device-height">
