--- a/cava/Views/Home/Login.cshtml
+++ b/cava/Views/Home/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using cava.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "INICIO DE SESIÓN";
+    ViewBag.Title = "CAVA RESTOBAR";
 }
 
 <br />
