--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
-    <title>@ViewBag.Title - Cava</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -31,11 +31,6 @@
             </button>
 
             <div class="collapse navbar-collapse d-xl-flex d-lg-flex flex-xl-row-reverse flex-lg-row-reverse" id="navbarColor02">
-                @*<ul class="bg-blue pt-3">
-                        <li><a id="menu-reservation-id" href="#" class="border-1 nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1 border-1">RESERVACIONES</a></li>
-                        <li><a id="menu-kitchen-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a></li>
-                        <li><a id="menu-experience-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">EXPERIENCIAS</a></li>
-                    </ul>*@
                 <div class="row">
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                         <a id="menu-reservation-id" href="#" class="btn w-100 border-1 nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mr-3">RESERVACIONES</a>
@@ -47,12 +42,6 @@
                         <a id="menu-experience-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">EXPERIENCIAS</a>
                     </div>
                 </div>
-                @*<div class="row col-xl-6 col-lg-2 col-md-12 col-sm-2">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-md-3 mt-sm-3 mt-3">
-                            <img src="~/Content/images/Icons/icon3.png" class="float-right d-xl-block d-lg-none d-md-block d-sm-none" style="height:50px;width:110px;border-radius:20px;" />
-                            <img src="~/Content/images/Icons/icon3.png" class="d-xl-none d-lg-block d-md-none d-sm-none d-none" style="height:50px;width:110px;border-radius:20px;" />
-                        </div>
-                    </div>*@
             </div>
         </nav>
     </div>
