--- a/cava/Views/Home/Login.cshtml
+++ b/cava/Views/Home/Login.cshtml
@@ -44,9 +44,7 @@
             <div class="row">
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-2 col-2"></div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-8 col-8">
-                    <div class="form-group">
-                        <input type="submit" id="btn-login" onclick="return ValidateLoginData()" value="INICIA SESIÓN" class="btn btn-success w-100" />
-                    </div>
+                    <input type="submit" id="btn-login" onclick="return ValidateLoginData()" value="INICIA SESIÓN" class="form-control btn btn-success w-100" />
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-sm-2 col-2"></div>
             </div>
