--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 d-flex justify-content-center">
                         <a id="menu-kitchen-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">GASTRONOMÍA</a>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 d-flex justify-content-center">
+                    <div id="loggin-container" class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 d-flex justify-content-center">
                         <a id="menu-experience-id" href="#" class="nav-link white-label menu custom-font-size mr-xl-3 mr-lg-3 mr-md-3 mr-sm-3 mt-1">EXPERIENCIAS</a>
                     </div>
                 </div>
