--- a/cava/Views/Shared/_Layout.cshtml
+++ b/cava/Views/Shared/_Layout.cshtml
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
+
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -27,6 +28,20 @@
         gtag('js', new Date());
 
         gtag('config', 'G-08GYW8ELZ0');
+
+        var PleaseRotateOptions = {
+            startOnPageLoad: true,
+            onHide: function () { },
+            onShow: function () { },
+            forcePortrait: true,
+            message: "",
+            subMessage: "Mantén tu dispositivo de manera vertical",
+            allowClickBypass: false,
+            onlyMobile: true,
+            zIndex: 1000,
+            iconNode: null
+        };
+
     </script>
 </head>
 <body class="bg">
@@ -71,5 +86,6 @@
     <script src="~/Scripts/jquery-mask/src/jquery.mask.js"></script>
     <script src="~/Scripts/reservation.js"></script>
     <script src="~/Scripts/jquery.scrollTo.min.js"></script>
+    <script src="~/Scripts/pleaseRotate.js"></script>
 </body>
 </html>
