Changed admin email and added reservation modal

--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -140,6 +140,36 @@
                     </div>
                 </div>
             </div>
+            <div id="reservation-confirmation-modal" class="modal fade bd-example-modal-lg p-3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg">
+                    <div class="modal-content radius-top-5 radius-buttom-5">
+                        <div class="bg-orange no-flex">
+                            <div class="row pb-3 pl-3 pr-3">
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3 bg-orange">
+                                    <label class="col-form-label white-label font-weight-bold">CONFIRMACIÓN DE RESERVAS</label>
+                                </div>
+                            </div>
+                            <hr />
+                            <div class="row pb-3 pl-3 pr-3">
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 d-flex justify-content-center">
+                                    <label class="col-form-label white-label font-weight-bold"><small>GRACIAS POR RESERVAR CON NOSOTROS</small></label>
+                                </div>
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 d-flex justify-content-center">
+                                    <label class="col-form-label white-label font-weight-bold"><small>¡TE ESPERAMOS!</small></label>
+                                </div>
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3 d-flex justify-content-center mb-5">
+                                    <label class="col-form-label white-label font-weight-bold"><small><small>EN BREVE RECIBIRÁS UN E-MAIL CON LA CONFIRMACIÓN DE TU RESERVA. NO OLVIDES REVISAR EL CORREO NO DESEADO EN CASO DE NO VERLO.</small></small></label>
+                                </div>
+                            </div>
+                            <div class="row pb-3 pl-3 pr-3">
+                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 d-flex justify-content-center">
+                                    <button id="btn-close-reservation-confirmation-modal" type="button" class="btn btn-danger w-25">CERRAR</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col-xl-2 col-lg-2 col-md-1 col-sm-1 col-1">
 
