--- a/cava/Views/Home/ReservationHandler.cshtml
+++ b/cava/Views/Home/ReservationHandler.cshtml
@@ -77,7 +77,7 @@
                             <input id="txt-reservation-phone" type="text" class="form-control no-max-width" placeholder="TELÉFONO" />
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                            <input id="txt-reservation-date" type="datetime" autocomplete="off" class="form-control custom-date col no-max-width" value="@DateTime.Now.Date" placeholder="FECHA DE RESERVACIÓN" />
+                            <input id="txt-reservation-date" type="text" autocomplete="off" class="form-control custom-date-admin col no-max-width" value="@DateTime.Now.Date.ToString("dd/MM/yyyy")" placeholder="FECHA DE RESERVACIÓN" />
                         </div>
                     </div>
                     <div class="row pt-3">
