--- a/cava/Views/Home/ReservationRetrieve.cshtml
+++ b/cava/Views/Home/ReservationRetrieve.cshtml
@@ -16,7 +16,7 @@
                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-12 col-12">
                     <label class="font-weight-bold"><b>PERSONAS</b></label>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 ml-3">
+                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-6 pl-4">
                     <label class="font-weight-bold"><b>E-MAIL</b></label>
                 </div>
                 <div class="col-xl-2 col-lg-2 col-md-2 col-sm-6 col-6">
@@ -49,7 +49,7 @@
                     <div class="d-xl-none d-lg-none d-md-block d-sm-block d-block pt-xl-0 pt-lg-0 col-md-4 col-6">
 
                     </div>
-                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6 ml-3">
+                    <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 col-6 pl-4">
                         <label class="font-weight-bold d-xl-none d-lg-none d-md-block d-sm-block d-block">CORREO ELECTRÓNICO: </label> <label class="">@Html.Encode(reservation.Email)</label>
                     </div>
                     <div class="d-xl-none d-lg-none d-md-none d-sm-none d-block pt-xl-0 pt-lg-0 col-6">
