--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -122,10 +122,10 @@
                             </div>
                             <div class="row pb-3 pl-3 pr-3">
                                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3">
-                                    <input type="text" class="form-control col" id="txt-email" value="" placeholder="CORREO ELECTRÓNICO" />
+                                    <input type="text" class="form-control col" id="txt-phone" value="" placeholder="TELÉFONO" />
                                 </div>
                                 <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 mt-3 pl-md-0">
-                                    <input type="text" class="form-control col" id="txt-phone" value="" placeholder="TELÉFONO" />
+                                    <input type="text" class="form-control col" id="txt-email" value="" placeholder="CORREO ELECTRÓNICO" />
                                 </div>
                             </div>
                             <div class="row pb-3 pl-3 pr-3">
@@ -158,7 +158,7 @@
                                     <label class="col-form-label white-label font-weight-bold"><small>¡TE ESPERAMOS!</small></label>
                                 </div>
                                 <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mt-3 d-flex justify-content-center mb-5">
-                                    <label class="col-form-label white-label font-weight-bold"><small><small>EN BREVE RECIBIRÁS UN E-MAIL CON LA CONFIRMACIÓN DE TU RESERVA. NO OLVIDES REVISAR EL CORREO NO DESEADO EN CASO DE NO VERLO.</small></small></label>
+                                    <label class="col-form-label white-label font-weight-bold"><small><small>SI INGRESASTE TU E-MAIL, EN BREVE RECIBIRÁS LA CONFIRMACIÓN DE TU RESERVA. NO OLVIDES REVISAR EL CORREO NO DESEADO EN CASO DE NO VERLO.</small></small></label>
                                 </div>
                             </div>
                             <div class="row pb-3 pl-3 pr-3">
