Changes applied for available range hours

--- a/cava/Views/Home/Experience.cshtml
+++ b/cava/Views/Home/Experience.cshtml
@@ -1,5 +1,10 @@
 ﻿@model cava.Models.Custom.Deliverer
 
+<input type="hidden" id="hidden-none-working-week-days" value="@Model.NoneWorkingWeekDays" />
+<input type="hidden" id="hidden-week-hours" value="@Model.WeekHours" />
+<input type="hidden" id="hidden-saturday-hours" value="@Model.SaturdayHours" />
+<input type="hidden" id="hidden-sunday-hours" value="@Model.SundayHours" />
+
 <div class="device-height">
     <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 pr-0">
